# wpp

./: .gitignore  0_15_2_junit.patch  BUILD.bazel  CMakeLists.txt  Dockerfile  Makefile  README.md  WORKSPACE.bazel  abbreviations.txt  cmake-format.py  workspaces.rc
.circleci/: config.yml
cmake/: FindCheck.cmake
src/: BUILD.bazel  cmdline.c  cmdline.h  context.c  context.h  directives.c  directives.h  format.c  format.h  main.c  rcfile.c  rcfile.h  wp.c  wp.h
src/lib/: cmdline.c  context.c  directives.h  format.c  format.h  rcfile.h
test/: BUILD.bazel  check_macros.h  check_main.c  cmdline_test.c  context_test.c  core_test.c  core_test.h  format_test.c  format_test.h  rcfile_test.c  tests.c  tests.h
