load("@rules_foreign_cc//foreign_cc:defs.bzl", "configure_make")

configure_make(
    name = "libcheck",
    autoreconf = True,
    configure_command = "configure",
    configure_in_place = True,
    lib_source = "@libcheck//:all",
    out_static_libs = ["libcheck.a"],
    out_data_dirs = [
      "contrib",
    ],
    visibility = ["//visibility:public"],
    env = {
      "AR": "",
    },
)

