load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_library(
    name = "directives",
    srcs = [
      "directives.c",
    ],
    hdrs = [
      "directives.h",
    ],
    deps = [
      ":context"
    ],
    visibility = ["//visibility:public"],
    linkstatic = True,
)
cc_library(
    name = "format",
    srcs = [
      "format.c",
    ],
    hdrs = [
      "format.h",
    ],
    visibility = ["//visibility:public"],
    linkstatic = True,
)
cc_library(
    name = "context",
    srcs = [
      "context.c",
    ],
    hdrs = [
      "context.h",
    ],
    visibility = ["//visibility:public"],
    linkstatic = True,
)

cc_binary(
    name = "wp",
    srcs = [
      "main.c"
    ],
    deps = [
      ":context",
      ":format",
      ":directives",
    ],
    linkstatic = True,
)
