load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_library(
    name = "directives",
    srcs = [
      "directives.c",
    ],
    hdrs = [
      "directives.h",
    ],
    deps = [
      ":context"
    ],
    visibility = ["//visibility:public"],
    linkstatic = True,
)
cc_library(
    name = "format",
    srcs = [
      "format.c",
    ],
    hdrs = [
      "format.h",
    ],
    visibility = ["//visibility:public"],
    linkstatic = True,
)
cc_library(
    name = "context",
    srcs = [
      "context.c",
    ],
    hdrs = [
      "context.h",
    ],
    visibility = ["//visibility:public"],
    linkstatic = True,
)
cc_library(
    name = "cmdline",
    srcs = [
      "cmdline.c",
    ],
    hdrs = [
      "cmdline.h",
    ],
    deps = [
      ":context",
      ":rcfile",
    ],
    visibility = ["//visibility:public"],
    linkstatic = True,
)
cc_library(
    name = "rcfile",
    srcs = [
      "rcfile.c",
    ],
    hdrs = [
      "rcfile.h",
    ],
    deps = [
      ":context",
      ":format",
    ],
    visibility = ["//visibility:public"],
    linkstatic = True,
)

cc_binary(
    name = "wp",
    copts = [
      "-O3",
    ],
    srcs = [
      "main.c"
    ],
    deps = [
      ":context",
      ":format",
      ":directives",
      ":cmdline",
      ":rcfile",
    ],
    linkstatic = True,
)
