load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_library(
    name = "libs",
    srcs = [
      "directives.c",
      "format.c",
      "context.c",
      "cmdline.c",
      "rcfile.c",
    ],
    hdrs = [
      "directives.h",
      "format.h",
      "context.h",
      "cmdline.h",
      "rcfile.h",
    ],
    visibility = ["//visibility:public"],
    linkstatic = True,
)

cc_binary(
    name = "wp",
    copts = [
      "-O3",
    ],
    srcs = [
      "main.c"
    ],
    deps = [
      ":libs",
    ],
    linkstatic = True,
)
