load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_test(
    name = "tests",
    srcs = [
        "check_main.c",
        "check_macros.h",
        "format_test.c",
    ],
    deps = [
      "//:libcheck",
      "//src:format",
    ],
    linkopts = select({
        ":linux": ["-lrt","-lpthread"],
        "//conditions:default": [],
    }),
    linkstatic = True,
)

config_setting(
    name = "linux",
    constraint_values = [
        "@bazel_tools//platforms:linux",
    ],
)


