load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_test(
    name = "tests",
    srcs = [
        "check_main.c",
        "format_test.c",
        "rcfile_test.c",
        "context_test.c",
        "tests.c",
        "tests.h",
    ],
    deps = [
      "//3rdparty:libcheck",
      "//src:libs",
    ],
    linkopts = select({
        ":linux": ["-lrt","-lpthread"],
        "//conditions:default": [],
    }),
    linkstatic = True,
)

config_setting(
    name = "linux",
    constraint_values = [
        "@bazel_tools//platforms:linux",
    ],
)


